# refactor.ai

./: README.md  pyproject.toml
.github/workflows/: publish.yml
refactor/: cli.py  ignore.py  metadata.py  scanner.py  tree.py  validation.py
